making project java8 compatible