@@ -42,7 +42,7 @@ public class LicenseImpl implements License {
 
     @Override
     public void setName(String name) {
-        if (name == null || name.isBlank()) {
+        if (name == null || name.trim().isEmpty()) {
             throw new NullPointerException("Name cannot be null or blank");
         }
         this.name = name;
